--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </div>
       <div class="col-sm-3">
           <form action="welcom.html" style="border:1px solid #ccc">
-              <div class="container">   </form> 
+              <div class="container">    
                 <h3>Personal information</h3> 
                 <h4>Access on QUIZ</h4>
                 <p><em>Please fill in this form to take a QUIZ</em></p>
@@ -74,6 +74,7 @@
                 </div>
               </div>
       </div>
+      </form>
       <div class="col-sm-3">
           <h3>Attendance</h3>
           <p>This is for Supervisor only <a href="login.html">ATTENDANCE LIST</a></p>
