--- a/attendance.html
+++ b/attendance.html
@@ -1,17 +1,17 @@
 <!DOCTYPE HTML>
- <html>
+<html>
     <head>
-        <title>QUIZ-BOARD</title>
-        <meta charset="utf-8">
-        <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-        <link rel="stylesheet" type="text/css" href="css/styles.css">
-        <script   src="https://code.jquery.com/jquery-3.3.1.min.js"   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="   crossorigin="anonymous"></script>
-        <script src="js/scripts.js"></script>
+         <title>QUIZ-BOARD</title>
+         <meta charset="utf-8">
+         <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+         <link rel="stylesheet" type="text/css" href="css/styles.css">
+         <script   src="https://code.jquery.com/jquery-3.3.1.min.js"   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/ NMZxltwRo8QtmkMRdAu8="   crossorigin="anonymous"></script>
+         <script src="js/scripts.js"></script>
     </head>
-      <body>
+    <body>
          <h1>ATTENDANCE SHEET</h1>
-            <p>This is an attendance sheet for student attended the Quiz of JavaScript</p>
-            <img src="https://cdn.vertex42.com/ExcelTemplates/Images/monthly-attendance-form-large.gif" width="1000" lenght="1000">
-            <a href="index.html">back</a>
-      </body>
- </html>
+             <p>This is an attendance sheet for student attended the Quiz of JavaScript</p>
+             <img src="https://cdn.vertex42.com/ExcelTemplates/Images/monthly-attendance-form-large.gif" width="1000" lenght="1000">
+             <a href="index.html">back</a>
+    </body>
+</html>
