--- a/quiz.html
+++ b/quiz.html
@@ -19,80 +19,80 @@
                               <div class="well">
                                      <p><strong> 1. Can you access Cookie using javascript?</strong></p>
                                    <br>
-                                     <input type="radio" name="questionOne" id="mc" value="correct">Yes<br>
-                                     <input type="radio" name="questionOne" id="mc" value="wrong">No<br>
+                                     <input type="radio" name="questionOne" id="Iq1" value="correct">Yes<br>
+                                     <input type="radio" name="questionOne" id="Iq1" value="wrong">No<br>
                              </div>
                               <div class="well">
                                   <p><strong> 2. Which of the following is the correct syntax to redirect a url using JavaScript?</strong></p>
                                  <br>
-                                  <input type="radio" name="questionTwo" id="mc" value="wrong">document.location='http://www.newlocation.com<br>
-                                  <input type="radio" name="questionTwo" id="mc" value="wrong">browser.location='http://www.newlocation.com<br>
-                                  <input type="radio" name="questionTwo" id="mc" value="wrong">browser.location='https://www.newlocation.com<br>
-                                  <input type="radio" name="questionTwo" id="mc" value="correct">navigator.location='http://www.newlocation.com<br>
+                                  <input type="radio" name="questionTwo" id="Iq2" value="wrong">document.location='http://www.newlocation.com<br>
+                                  <input type="radio" name="questionTwo" id="Iq2" value="wrong">browser.location='http://www.newlocation.com<br>
+                                  <input type="radio" name="questionTwo" id="Iq2" value="wrong">browser.location='https://www.newlocation.com<br>
+                                  <input type="radio" name="questionTwo" id="Iq2" value="correct">navigator.location='http://www.newlocation.com<br>
                               </div>
                                <div class="well">
                                     <p><strong> 3. Which built-in method removes the last element from an array and returns that element?</strong></p>
                                     <br>
-                                    <input type="radio" name="questionThree" id="mc" value="wrong">last()<br>
-                                    <input type="radio" name="questionThree" id="mc" value="wrong">get()<br>
-                                    <input type="radio" name="questionThree" id="mc" value="correct">pop()<br>
-                                    <input type="radio" name="questionThree" id="mc" value="wrong">None of the above<br>
+                                    <input type="radio" name="questionThree" id="Iq3" value="wrong">last()<br>
+                                    <input type="radio" name="questionThree" id="Iq3" value="wrong">get()<br>
+                                    <input type="radio" name="questionThree" id="Iq3" value="correct">pop()<br>
+                                    <input type="radio" name="questionThree" id="Iq3" value="wrong">None of the above<br>
                                </div>
                                 <div class="well">
                                     <p><strong> 4. Which built-in method returns the characters in a string beginning at the specified location?</strong></p>
                                     <br>
-                                    <input type="radio" name="questionFour" id="mc" value="correct">substr()<br>
-                                    <input type="radio" name="questionFour" id="mc" value="wrong">getSubstring()<br>
-                                    <input type="radio" name="questionFour" id="mc" value="wrong">slice()<br>
-                                    <input type="radio" name="questionFour" id="mc" value="wrong">None of the above<br>
+                                    <input type="radio" name="questionFour" id="Iq4" value="correct">substr()<br>
+                                    <input type="radio" name="questionFour" id="Iq4" value="wrong">getSubstring()<br>
+                                    <input type="radio" name="questionFour" id="Iq4" value="wrong">slice()<br>
+                                    <input type="radio" name="questionFour" id="Iq4" value="wrong">None of the above<br>
                                 </div>
                                  <div class="well">
                                       <p><strong> 5. Which of the following function of Boolean object returns the primitive value of the Boolean object?</strong></p>
                                       <br>
-                                      <input type="radio" name="questionFive" id="mc" value="wrong">toSource()<br>
-                                      <input type="radio" name="questionFive" id="mc" value="correct">valueOf()<br>
-                                      <input type="radio" name="questionFive" id="mc" value="wrong">toString()<br>
-                                      <input type="radio" name="questionFive" id="mc" value="wrong">None of the above<br>
+                                      <input type="radio" name="questionFive" id="Iq5" value="wrong">toSource()<br>
+                                      <input type="radio" name="questionFive" id="Iq5" value="correct">valueOf()<br>
+                                      <input type="radio" name="questionFive" id="Iq5" value="wrong">toString()<br>
+                                      <input type="radio" name="questionFive" id="Iq5" value="wrong">None of the above<br>
                                  </div>
                                   <div class="well">
                                        <p><strong> 6. Which of the following function of String object executes the search for a match between a regular expression and a specified string?</strong></p>
                                        <br>
-                                       <input type="radio" name="questionSix" id="mc" value="wrong">concat()<br>
-                                       <input type="radio" name="questionSix" id="mc" value="wrong">match()<br>
-                                       <input type="radio" name="questionSix" id="mc" value="wrong">replace()<br>
-                                       <input type="radio" name="questionSix" id="mc" value="correct">search()<br>
+                                       <input type="radio" name="questionSix" id="Iq6" value="wrong">concat()<br>
+                                       <input type="radio" name="questionSix" id="Iq6" value="wrong">match()<br>
+                                       <input type="radio" name="questionSix" id="Iq6" value="wrong">replace()<br>
+                                       <input type="radio" name="questionSix" id="Iq6" value="correct">search()<br>
                                   </div>
                                    <div class="well">
                                         <p><strong> 7. Which of the following function of String object creates a string to be displayed in a big font as if it were in a <em>big</em> tag?</strong></p>
                                         <br>
-                                        <input type="radio" name="questionSeven" id="mc" value="wrong">anchor()<br>
-                                        <input type="radio" name="questionSeven" id="mc" value="correct">big()<br>
-                                        <input type="radio" name="questionSeven" id="mc" value="wrong">blink()<br>
-                                        <input type="radio" name="questionSeven" id="mc" value="wrong">italics()<br>     
+                                        <input type="radio" name="questionSeven" id="Iq7" value="wrong">anchor()<br>
+                                        <input type="radio" name="questionSeven" id="Iq7" value="correct">big()<br>
+                                        <input type="radio" name="questionSeven" id="Iq7" value="wrong">blink()<br>
+                                        <input type="radio" name="questionSeven" id="Iq7" value="wrong">italics()<br>     
                                    </div>
                                     <div class="well">
                                          <p><strong> 8. Which of the following function of String object causes a string to be displayed as struck-out text, as if it were in a <em>strike</em> tag?</strong></p>
                                          <br>
-                                         <input type="radio" name="questionEight" id="mc" value="wrong">sup()<br>
-                                         <input type="radio" name="questionEight" id="mc" value="wrong">small()<br>
-                                         <input type="radio" name="questionEight" id="mc" value="correct">big()<br>
-                                         <input type="radio" name="questionEight" id="mc" value="wrong">anchor()<br>     
+                                         <input type="radio" name="questionEight" id="Iq8" value="wrong">sup()<br>
+                                         <input type="radio" name="questionEight" id="Iq8" value="wrong">small()<br>
+                                         <input type="radio" name="questionEight" id="Iq8" value="correct">big()<br>
+                                         <input type="radio" name="questionEight" id="Iq8" value="wrong">anchor()<br>     
                                     </div>
                                      <div class="well">
                                           <p><strong> 9. Which of the following function of Array object creates a new array with the results of calling a provided function on every element in this array?</strong></p>
                                           <br>
-                                          <input type="radio" name="questionNine" id="mc" value="wrong">push()<br>
-                                          <input type="radio" name="questionNine" id="mc" value="wrong">join()<br>
-                                          <input type="radio" name="questionNine" id="mc" value="wrong">pop()<br> 
-                                          <input type="radio" name="questionNine" id="mc" value="correct">map()<br>    
+                                          <input type="radio" name="questionNine" id="Iq9" value="wrong">push()<br>
+                                          <input type="radio" name="questionNine" id="Iq9" value="wrong">join()<br>
+                                          <input type="radio" name="questionNine" id="Iq9" value="wrong">pop()<br> 
+                                          <input type="radio" name="questionNine" id="Iq9" value="correct">map()<br>    
                                      </div>
                                       <div class="well">
                                            <p><strong> 10. Which of the following function of Array object sorts the elements of an array?</strong></p>
                                            <br>
-                                           <input type="radio" name="questionTen" id="mc" value="wrong">toSource()<br>
-                                           <input type="radio" name="questionTen" id="mc" value="correct">sort()<br>
-                                           <input type="radio" name="questionTen" id="mc" value="wrong">toString()<br>
-                                           <input type="radio" name="questionTen" id="mc" value="wrong">unshift()<br>     
+                                           <input type="radio" name="questionTen" id="Iq10" value="wrong">toSource()<br>
+                                           <input type="radio" name="questionTen" id="Iq10" value="correct">sort()<br>
+                                           <input type="radio" name="questionTen" id="Iq10" value="wrong">toString()<br>
+                                           <input type="radio" name="questionTen" id="Iq10 value="wrong">unshift()<br>     
                                       </div>
                                 </div>
                                            <input type="button" name="results" value="SUBMIT" id="button" class="btn btn-danger" onClick="check();">
